Identify locality searches by administrative hierarchy
